# PatternStreams

./: .gitignore  CMakeLists.txt  PatternStreams.sln  README.md  conanfile.py
PatternStreams/: PatternStreams.vcxproj  PatternStreams.vcxproj.filters
PatternStreams/Private/: PatternStreams.cpp  PatternStreamsPrivate.cpp  PatternStreamsPrivate.h
PatternStreams/Public/: PatternStreams.h
